--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
-}
+  },
+
+      "AllowedHosts": "*",
+      "ConnectionStrings": {
+        "LocalDB":"Server=(localdb)\\mssqllocaldb;Database=db;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+      }
+    }
+  
+
